[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Interaction.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment() {
	COLOR = vec4(1, 1, 1, texture(TEXTURE, UV).a);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[node name="Interaction" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
scale = Vector2( 1.1, 1.1 )

[node name="Sprite" type="Sprite" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Node2D_area_exited"]
